--- a/app/core.conf
+++ b/app/core.conf
@@ -16,7 +16,7 @@
   "utpex": true, 
   "max_active_downloading": 2, 
   "max_active_seeding": 40, 
-  "allow_remote": false, 
+  "allow_remote": true, 
   "max_half_open_connections": 100, 
   "download_location": "/torrent", 
   "compact_allocation": false, 
