--- a/config/core.conf
+++ b/config/core.conf
@@ -10,7 +10,7 @@
   "queue_new_to_top": false, 
   "ignore_limits_on_local_network": false, 
   "rate_limit_ip_overhead": true, 
-  "daemon_port": 58846, 
+  "daemon_port": 2975, 
   "natpmp": true, 
   "max_active_limit": 50, 
   "utpex": true, 
@@ -27,13 +27,13 @@
   "enc_level": 0, 
   "max_connections_per_second": 30, 
   "dont_count_slow_torrents": false, 
-  "random_outgoing_ports": true, 
+  "random_outgoing_ports": false, 
   "max_upload_slots_per_torrent": -1, 
   "new_release_check": false, 
   "enc_out_policy": 1, 
   "outgoing_ports": [
-    0, 
-    0
+    3001, 
+    3100
   ], 
   "seed_time_limit": -1, 
   "cache_size": 512, 
@@ -53,16 +53,16 @@
   "max_connections_global": 500, 
   "enc_prefer_rc4": true, 
   "listen_ports": [
-    6881, 
-    6891
+    3000, 
+    3000
   ], 
   "dht": true, 
   "stop_seed_ratio": 10.0, 
   "seed_time_ratio_limit": -1.0, 
   "max_upload_speed_per_torrent": -1, 
-  "copy_torrent_file": true, 
+  "copy_torrent_file": false, 
   "del_copy_torrent_file": false, 
-  "move_completed": true, 
+  "move_completed": false, 
   "proxies": {
     "peer": {
       "username": "", 
@@ -97,5 +97,5 @@
   "max_connections_per_torrent": -1, 
   "remove_seed_at_ratio": false, 
   "autoadd_location": "/torrent/files", 
-  "plugins_location": "/app/plugins"
+  "plugins_location": "/config/plugins"
 }
