--- a/config/core.conf
+++ b/config/core.conf
@@ -39,7 +39,7 @@
   "cache_size": 512, 
   "share_ratio_limit": -1.0, 
   "max_download_speed": -1.0, 
-  "geoip_db_location": "/usr/share/GeoIP/GeoIP.dat", 
+  "geoip_db_location": "/config/GeoIP.dat", 
   "torrentfiles_location": "/torrent/files", 
   "stop_seed_at_ratio": false, 
   "peer_tos": "0x00", 
